--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@ input{
 }
 
 #board{
-	width: 230px;
-	height: 230px;
+	width: 240px;
+	height: 240px;
+}
+
+/*
+
 	border-style: solid;
 	border-color: "red";
-}
+	*/
