--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-input{
+.boxes{
 	width: 70px;
 	height: 70px;
 }
@@ -8,8 +8,10 @@ input{
 	height: 260px;
 }
 
-/*
-
-	border-style: solid;
-	border-color: "red";
-	*/
+.overlay {
+	position: fixed;
+	z-index: 1;
+	height: 100%;
+	width: 0;
+	background-color: rgb(0,0,0);
+}
