--- a/style.css
+++ b/style.css
@@ -8,10 +8,14 @@
 	height: 260px;
 }
 
-.overlay {
+#overlay {
 	position: fixed;
 	z-index: 1;
 	height: 100%;
 	width: 0;
 	background-color: rgb(0,0,0);
+}
+
+#menu {
+	z-index: 1;
 }
