--- a/style.css
+++ b/style.css
@@ -15,8 +15,10 @@
 	width: 0;
 	background-color: rgb(0,0,0);
 	overflow-x: hidden;
+	position:absolute
 }
 
 #menu {
 	z-index: 1;
+	position:absolute
 }
