--- a/style.css
+++ b/style.css
@@ -13,11 +13,7 @@
 	z-index: 1;
 	height: 100%;
 	width: 0;
+	/*
 	background-color: rgb(0,0,0);
-	overflow-x: hidden;
-}
-
-#menu {
-	z-index: 2;
-	position: absolute;
+	overflow-x: hidden;*/
 }
