--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 	z-index: 1;
 	height: 100%;
 	width: 0;
-	text-align: center;
+	text-align: left;
 	/*
 	background-color: rgb(0,0,0);
 	overflow-x: hidden;*/
