--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 	height: 100%;
 	width: 0;
 	text-align: center;
-	/*
+	
 	background-color: rgb(0,0,0);
-	overflow-x: hidden;*/
+	overflow-x: hidden;
 }
