--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 	height: 260px;
 }
 
-#overlay {
+.overlay {
 	position: fixed;
 	z-index: 1;
 	height: 100%;
@@ -17,4 +17,12 @@
 	
 	background-color: rgb(0,0,0);
 	overflow-x: hidden;
+}
+
+.contents {
+	position: relative;
+	top: 25%;
+	width: 100%;
+	text-align: center;
+	margin-top: 30px;
 }
