--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 	height: 260px;
 }
 
-.overlay {
+#overlay {
 	position: fixed;
 	z-index: 1;
 	height: 100%;
@@ -19,7 +19,7 @@
 	overflow-x: hidden;
 }
 
-.contents {
+#contents {
 	position: relative;
 	top: 25%;
 	width: 100%;
